--- a/Converter/pom.xml
+++ b/Converter/pom.xml
@@ -34,7 +34,17 @@
 	<dependency>
 	  <groupId>com.github.sealedtx</groupId>
 	  <artifactId>java-youtube-downloader</artifactId>
-	  <version>2.2.1</version>
+	  <version>2.2.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>ws.schild</groupId>
+	    <artifactId>jave-core</artifactId>
+	    <version>2.4.5</version>
+	</dependency>
+	<dependency>
+	    <groupId>ws.schild</groupId>
+	    <artifactId>jave-native-win64</artifactId>
+	    <version>2.4.5</version>
 	</dependency>
   </dependencies>
 </project>
